refactor. add GetAccountUppercase endpoint
